--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div class="container-fluid charContainer">
         <div class="row char-text-row">
             <div class="col-12">
-                <h2>Choose one of the characters below to get started!</h2>
+                <h2 id="instructions">Choose your hero!</h2>
             </div>
         </div>
         <div class="row character-row">
             <!-- Chewbacca -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char1 my-3">
+                <div type="button" class="card char1 my-3" characterName="Chewbacca" health="180" attack="12" counterAttack="20">
                     <h3>Chewbacca</h3>
                     <img class="character-pic" src="assets/images/image1.png"/>
                     <h4>180</h4>
@@ -39,7 +39,7 @@
             </div>
             <!-- Mace Windu -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char2 my-3">
+                <div type="button" class="card char2 my-3" characterName="Mace Windu" health="140" attack="10" counterAttack="35">
                     <h3>Mace Windu</h3>
                     <img class="character-pic" src="assets/images/image2.png"/>
                     <h4>140</h4>
@@ -47,7 +47,7 @@
             </div>
             <!-- Storm Trooper -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char3 my-3">
+                <div type="button" class="card char3 my-3" characterName="Storm Trooper" health="150" attack="16" counterAttack="5">
                     <h3>Storm Trooper</h3>
                     <img class="character-pic" src="assets/images/image3.png"/>
                     <h4>150</h4>
@@ -55,7 +55,7 @@
             </div>
             <!-- Princess Leia -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char4 my-3">
+                <div type="button" class="card char4 my-3" characterName="Princess Leia" health="200" attack="14" counterAttack="10">
                     <h3>Princess Leia</h3>
                     <img class="character-pic" src="assets/images/image4.png"/>
                     <h4>200</h4>
@@ -95,9 +95,10 @@
     
 </body>
 
-<!-- Links Javascript -->
-<script type="text/javascript" src="./assets/javascript/game.js"></script>
 <!-- Links jQuery Library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Links Javascript -->
+<script type="text/javascript" src="./assets/javascript/game.js"></script>
 
 </html>
