--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
         
         <!-- Your character -->
         <div class="row yourCharContainer">
-            <div class="col-sm-12 col-md-6 col-xl-3 yourChar">
+            <div class="col-sm-12 yourChar">
                 <h3>Your Character:</h3>
+                <span id="attackAlert"></span>
             </div>
         </div>
 
@@ -84,7 +85,7 @@
 
         <!-- Your Opponent -->
         <div class="row yourOpponentContainer">
-            <div class="col-sm-12 col-md-6 col-xl-3 yourOpponent">
+            <div class="col-sm-12 yourOpponent">
                 <h3>Your Opponent:</h3>
             </div>
         </div>
