js update final

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row character-row">
             <!-- Chewbacca -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char1 my-3" characterName="Chewbacca" health="180" attack="12" counterAttack="20">
+                <div type="button" class="card char1 my-3" characterName="Chewbacca" health="180" attack="2" counterAttack="25">
                     <h3>Chewbacca</h3>
                     <img class="character-pic" src="assets/images/image1.png"/>
                     <h4>180</h4>
@@ -39,26 +39,26 @@
             </div>
             <!-- Mace Windu -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char2 my-3" characterName="Mace Windu" health="140" attack="10" counterAttack="35">
+                <div type="button" class="card char2 my-3" characterName="Mace Windu" health="160" attack="5" counterAttack="24">
                     <h3>Mace Windu</h3>
                     <img class="character-pic" src="assets/images/image2.png"/>
-                    <h4>140</h4>
+                    <h4>160</h4>
                 </div>
             </div>
             <!-- Storm Trooper -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char3 my-3" characterName="Storm Trooper" health="150" attack="16" counterAttack="5">
+                <div type="button" class="card char3 my-3" characterName="Storm Trooper" health="180" attack="6" counterAttack="15">
                     <h3>Storm Trooper</h3>
                     <img class="character-pic" src="assets/images/image3.png"/>
-                    <h4>150</h4>
+                    <h4>180</h4>
                 </div>
             </div>
             <!-- Princess Leia -->
             <div class="col-sm-12 col-md-6 col-xl-3">
-                <div type="button" class="card char4 my-3" characterName="Princess Leia" health="200" attack="14" counterAttack="10">
+                <div type="button" class="card char4 my-3" characterName="Princess Leia" health="160" attack="4" counterAttack="20">
                     <h3>Princess Leia</h3>
                     <img class="character-pic" src="assets/images/image4.png"/>
-                    <h4>200</h4>
+                    <h4>160</h4>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
         </div>
 
         <!-- Reset Button -->
-        <button type="button" class="resetButton">RESET</button>
+        <button type="button" class="resetButton" value="Refresh Page" onClick="history.go(0)">RESET</button>
     </div>
     
 </body>
